<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:fragment="com.example.notekeeper.SettingsActivity$MessagesFragment"
        app:icon="@drawable/messages"
        app:key="messages_header"
        app:title="@string/messages_header" />

    <!--todo set input type email address -->
    <EditTextPreference
        android:key="user_email_address_header"
        android:title="@string/pref_title_email_address"
        android:defaultValue="@string/pref_default_email_address"
        app:useSimpleSummaryProvider="true"
    />

    <EditTextPreference
        app:key="user_display_name_header"
        app:title="@string/pref_title_display_name"
        app:defaultValue="@string/pref_default_display_name"
        app:useSimpleSummaryProvider="true"
        />

</PreferenceScreen>